<resources>
    <string name="app_name">AnimalRescue</string>
    <string name="messages">Messages</string>
    <string name="my_animals">My Animals</string>
    <string name="scan_qr">Scan QR</string>
    <string name="report">Report</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="animals_i_m_treating">Animals I\'m Treating</string>
    <string name="user_avatar">User Avatar</string>
    <string name="animal_name">Animal Name</string>
    <string name="breed">Breed</string>
    <string name="state_e_g_injured_lost">State (e.g. Injured, Lost)</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="get_my_location">Get my location</string>
    <string name="photos_videos">Photos / Videos</string>
    <string name="add_photos_videos">Add Photos/Videos</string>
    <string name="submit_report">Submit Report</string>
    <string name="remove_media">Remove media</string>
    <string name="media">Media</string>
    <string name="enable_2fa">Enable 2FA</string>
    <string name="disable_2fa">Disable 2FA</string>
    <string name="save">Save</string>
    <string name="two_factor_authentication">Two-Factor Authentication</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="avatar">Avatar</string>
    <string name="tap_to_change_avatar">Tap to change avatar</string>
    <string name="two_factor_authorization">Two-factor authorization</string>
    <string name="code">Code</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="why_should_you_be_given_volunteer_status">Why should you be given volunteer status?</string>
    <string name="submit_request">Submit request</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_media">Send Media</string>
    <string name="unsubscribe_from_animal">Unsubscribe from animal</string>
    <string name="subscribe_to_animal">Subscribe to animal</string>
    <string name="status">Status</string>
    <string name="recent_reports">Recent reports</string>
    <string name="login_with_google">Login with Google</string>
    <string name="name">Name</string>
    <string name="claim_report">Claim report</string>
    <string name="create_treatment_report">Create treatment report</string>
    <string name="money_spent">Money spent</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="viber_phone">Viber phone</string>
    <string name="telegram_username">Telegram username</string>
    <string name="whatsapp_phone">WhatsApp phone</string>
    <string name="send_message">Send message</string>
    <string name="close">Close</string>
    <string name="donate">Donate</string>
    <string name="anonymously">Anonymously</string>
    <string name="comment">Comment</string>
    <string name="amount">Amount</string>
    <string name="thank_you_for_your_donation">Thank you for your donation!</string>
    <string name="your_payment_was_successful">Your payment was successful.</string>
    <string name="payment_failed">Payment failed</string>
    <string name="something_went_wrong_during_the_payment_process">Something went wrong during the payment process.</string>
    <string name="try_again">Try again</string>
    <string name="processing_your_payment">Processing your payment…</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="animal_name_leave_empty_if_not_changed">Animal Name (leave empty if not changed)</string>
    <string name="money_spent_fmt">Money Spent: %.2f</string>
    <string name="date_fmt">Date: %s</string>
    <string name="failed_to_fetch_animal">Failed to fetch animal: %s</string>
    <string name="updated_subscription_to_animal">Updated subscription to animal!</string>
    <string name="failed_to_update_subscription">Failed to update subscription: %s</string>
    <string name="animal_info_updated">Animal info updated!</string>
    <string name="treatment_report_created">Treatment report created!</string>
    <string name="failed_to_update_animal_info">Failed to update animal info: %s</string>
    <string name="failed_to_create_treatment_report">Failed to create treatment report: %s</string>
    <string name="other_user">Other User</string>
    <string name="message_sent">Message sent!</string>
    <string name="failed_to_send_message_fmt">Failed to send message: %s</string>
    <string name="select_media">Select Media</string>
    <string name="failed_to_read_image">Failed to read image!</string>
    <string name="full_name_fmt">%s %s</string>
    <string name="failed_to_fetch_messages">Failed to fetch messages: %s</string>
    <string name="payment_finished_successfully">Payment finished successfully!</string>
    <string name="failed_to_process_payment">Failed to process payment: %s</string>
    <string name="raised_fmt">Raised: $%.2f / $%.2f</string>
    <string name="from">From: %s</string>
    <string name="from_to">From %s to %s</string>
    <string name="failed_to_fetch_donation_goal">Failed to fetch donation goal: %s</string>
    <string name="failed_to_fetch_donations">Failed to fetch donations: %s</string>
    <string name="failed_to_initiate_payment">Failed to initiate payment: %s</string>
    <string name="failed_to_create_donation">Failed to create donation: %s</string>
    <string name="failed_to_fetch_goals">Failed to fetch goals: %s</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="_6_digit_code">6-digit code</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="failed_to_enable_2fa">Failed to enable 2fa: %s</string>
    <string name="failed_to_disable_2fa">Failed to disable 2fa: %s</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="failed_to_update_profile">Failed to update profile: %s</string>
    <string name="failed_to_upload_photo_fmt">Failed to upload photo: %s</string>
    <string name="failed_to_verify_2fa">Failed to verify 2fa: %s</string>
    <string name="failed_to_login">Failed to login: %s</string>
    <string name="failed_to_get_google_client_id">Failed to get google client id: %s</string>
    <string name="failed_to_fetch_user_fmt">Failed to fetch user: %s</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="location_is_needed_to_get_recent_animal_reports">Location is needed to get recent animal reports!</string>
    <string name="failed_to_fetch_recent_reports">Failed to fetch recent reports: %s</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="failed_to_register">Failed to register: %s</string>
    <string name="failed_to_upload_photo">Failed to upload photo: %s</string>
    <string name="you_cannot_add_more_than_10_medias">You cannot add more than 10 medias.</string>
    <string name="please_fill_required_fields">Please fill required fields</string>
    <string name="request_submitted">Request submitted!</string>
    <string name="failed_to_fetch_animal_reports_fmt">Failed to fetch animal reports: %s</string>
    <string name="failed_to_fetch_treatment_reports">Failed to fetch treatment reports: %s</string>
    <string name="anonymous">Anonymous</string>
    <string name="reported_by_fmt">Reported by: %s %s</string>
    <string name="assigned_to_fmt">Assigned to: %s %s</string>
    <string name="reported_by_user_without_account">Reported by user without account</string>
    <string name="not_assigned_to_anyone_yet">Not assigned to anyone yet</string>
    <string name="failed_to_assign_report">Failed to assign report: %s</string>
    <string name="failed_to_fetch_dialogs">Failed to fetch dialogs: %s</string>
    <string name="failed_to_fetch_animal_reports">Failed to fetch animal reports: %s</string>
    <string name="found_here">Found Here</string>
    <string name="my_location">My Location</string>
    <string name="please_select_location">Please select location</string>
    <string name="report_sent">Report sent!</string>
    <string name="failed_to_send_report">Failed to send report: %s</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="telegram_username_fmt">\@%s</string>
    <string name="you_need_to_login_to_send_messages">You need to login to send messages.</string>
    <string name="text">Text</string>
    <string name="unknown_qr_code_format">Unknown qr code format!</string>
    <string name="no_message">(no message)</string>
    <string name="media_message">[Media]</string>
    <string name="empty">(Empty)</string>
    <string name="media_message_fmt">[Media] %s</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="i_have_a_vehicle">I have a vehicle</string>
    <string name="when_you_can_help">When you can help?</string>
    <string name="on_weekdays">On weekdays</string>
    <string name="on_weekends">On weekends</string>
    <string name="how_you_can_help">How you can help?</string>
    <string name="provide_shelter_for_animals">Provide shelter for animals</string>
    <string name="deliver_animals_to_clinic">Deliver animals to clinic</string>
    <string name="on_site_visit">On-site visit</string>
    <string name="medical_care">Medical care</string>
    <string name="provide_information">Provide information</string>
    <string name="city">City</string>
    <string name="failed_to_submit_volunteer_request">Failed to submit volunteer request: %s</string>
    <string name="failed_to_fetch_volunteer_requests">Failed to fetch volunteer requests: %s</string>
    <string name="view_all_requests">View all requests</string>
    <string name="status_fmt">Status: %s</string>
    <string name="request_date_fmt">Request date: %s</string>
    <string name="review_date_fmt">Review date: %s</string>
</resources>