<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/baseline_no_accounts_24"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_change_avatar"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/edit_first_name"
            android:hint="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/edit_last_name"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/edit_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edit_telegram_username"
            android:hint="@string/telegram_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edit_viber_phone"
            android:hint="@string/viber_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/edit_whatsapp_phone"
            android:hint="@string/whatsapp_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_factor_authentication"
            android:layout_marginTop="20dp"/>

        <Switch
            android:id="@+id/switch_2fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_2fa"/>

        <Button
            android:id="@+id/button_save"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>

        <Button
            android:id="@+id/button_volunteer_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="Apply for volunteer"/>
    </LinearLayout>
</ScrollView>