<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status: ..."
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_request_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Request date: ..."
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/text_review_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Review date: ..."
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Review text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="Review text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/full_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/phone_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/city"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_should_you_be_given_volunteer_status"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/why_should_you_be_given_volunteer_status"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_has_vehicle"
        android:text="@string/i_have_a_vehicle"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_you_can_help"
        android:textStyle="bold"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_availability_weekdays"
        android:text="@string/on_weekdays"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_availability_weekends"
        android:text="@string/on_weekends"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_you_can_help"
        android:textStyle="bold"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_help_shelter"
        android:text="@string/provide_shelter_for_animals"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_help_clinic_delivery"
        android:text="@string/deliver_animals_to_clinic"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_help_onsite_visit"
        android:text="@string/on_site_visit"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_help_medical_care"
        android:text="@string/medical_care"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_help_information"
        android:text="@string/provide_information"
        android:clickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telegram_username"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_telegram_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/telegram_username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viber_phone"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_viber_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/viber_phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp_phone"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_whatsapp_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:hint="@string/whatsapp_phone"/>

</LinearLayout>